<resources>
    <string name="app_name">Dangal Games</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">Rummy\nDangal</string>
    <string name="facebook_app_id">2545723819010517</string>
    <string name="fb_login_protocol_scheme">fb2545723819010517</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="create_account">Create Account</string>
    <string name="login">Login</string>
    <string name="error_occurred">Error Occurred while fetching File\nPlease try again.</string>
    <string name="new_user">New user ?</string>
    <string name="create">Create</string>
    <string name="already_have_account">Already have Dangal Games account ?</string>
    <string name="email_support_centre">Email Support Centre</string>
    <string name="name_username">Name/Username</string>
    <string name="email">E-mail</string>
    <string name="issue_query">Issue/Query</string>
    <string name="details_desc_issue_query">Detailed description of issue/query</string>
    <string name="enter_email">Enter your E-mail ID to request a password reset</string>
    <string name="enter_email_hint">Enter your E-mail ID </string>
    <string name="return_login">Return to login ?</string>
    <string name="submit">Submit</string>
    <string name="notes_1">2 free withdrawals left for this month, After this you will be charged 25.00 per withdrawal.</string>
    <string name="notes_2">OTP to confirm the mobile number and address verified.</string>
    <string name="notes_3">This OTP will be sent your registered mobile number via SMS.</string>
    <string name="notes_4">Please enter the OTP in the box and click on &quot;Submit&quot;.</string>
    <string name="notes_5">Please contact Support@dangalgames.com if you are facing any problem in receiving the OTP.</string>
    <string name="notes_11">Withdrawal requests are processed every day except on bank holidays and once the withdrawal is processed from our end, it may take between 2 to 5 working days depending on the bank.</string>
    <string name="notes_12">All withdrawals will be subject to audit before being processed.</string>
    <string name="notes_13">Any winnings derived from the free money, promotional cash or free cash are not eligible for withdrawal.</string>
    <string name="notes_14">Players must have a \'Real Money\' funded with atleast INR 100 prior to requesting for first withdrawal.</string>
    <string name="notes_15">In order to ensure that withdrawal amount reaches the right person, all players making their first withdrawal request MUST send us a proof of ID (Passport or Driving License) and proof of residential address (phone bill or similar)</string>
    <string name="cashier">Cashier</string>
    <string name="support">Support</string>
    <string name="more">More</string>
    <string name="tpl">Rummy Premier League</string>
    <string name="unique_features">Unique Features</string>
    <string name="testimonials">Testimonials</string>
    <string name="promotions">Promotions</string>
    <string name="chips">Chips:</string>
    <string name="variants">Variants:</string>
    <string name="type">Type:</string>
    <string name="bet">Bet:</string>
    <string name="status">Status:</string>
    <string name="cash">Cash</string>
    <string name="tournaments">Tournaments</string>
    <string name="view_all">View All</string>
    <string name="low">Low</string>
    <string name="select">Select</string>
    <string name="tourney_id">Tourney ID</string>
    <string name="entry">Entry</string>
    <string name="cash_prize">Cash Prize</string>
    <string name="start_time">Start Time</string>
    <string name="status_">Status</string>
    <string name="players">Players</string>
    <string name="join_">Join</string>
    <string name="schedules_and_tables">Schedules &amp; tables</string>
    <string name="tourney_and_prize_info">Tourney &amp; Prize info</string>
    <string name="title_activity_new_account">New Account</string>
    <string name="title_activity_splash_screen">Dangal Games</string>
    <string name="title_activity_loby">Loby</string>
    <string name="title_activity_loby_full_screen">LobyFullScreen</string>
    <string name="account_overview">Account Overview</string>
    <string name="username">Username</string>
    <string name="cash_balance">Cash balance</string>
    <string name="fun_chips">Fun chips</string>
    <string name="loyalty_club_status">Loyalty points and Club status</string>
    <string name="player_status">Player status</string>
    <string name="kyc_completed">KYC completed</string>
    <string name="buy_chips">Buy Chips</string>
    <string name="real_chips">Real Chips</string>
    <string name="in_play">In Play</string>
    <string name="fun_chips_camel_case">Fun Chips</string>
    <string name="cash_games">Cash Games</string>
    <string name="free_games">Free Games</string>
    <string name="dart">Dart game</string>
    <string name="piku">Pikachu</string>
    <string name="bowl">Bowling</string>
    <string name="venonat">Venonat</string>
    <string name="email_us">E-mail us</string>
    <string name="live_chat">Live chat</string>
    <string name="deposit">Deposit</string>
    <string name="withdrawal">Withdrawal</string>
    <string name="select_deposit_amount">Select Deposit Amount</string>
    <string name="choose_bonus">Choose Bonus</string>
    <string name="choose_payment_option">Choose Payment Option</string>
    <string name="done">Done</string>
    <string name="select_amount">Select Amount</string>
    <string name="quick_select">Quick Select</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="free">Free</string>
    <string name="loyalty">Loyalty</string>
    <string name="pools">Pools</string>
    <string name="deals">Deals</string>
    <string name="points">Points</string>
    <string name="favorties">Favorties</string>
    <string name="eligible_tourneys">Eligible Tourneys</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>
    <string name="running">Running</string>
    <string name="rupee_symbol">\u20B9</string>
    <string name="rupee_symbol_blue"><![CDATA[<b><font color=#257CD7>\u20B9</font></b>]]></string>
    <string name="closed_deck">CLOSED DECK</string>
    <string name="open_deck">OPEN DECK</string>
    <string name="closed_card">CLOSED CARD</string>
    <string name="joker">JOKER</string>
    <string name="sort">SORT</string>
    <string name="drop">DROP</string>
    <string name="declare">DECLARE</string>
    <string name="extra_time">EXTRA\nTIME</string>
    <string name="discard">Discard</string>
    <string name="group">Group</string>
    <string name="min_buyin">Min Buy In</string>
    <string name="max_buyin">Max Buy In</string>
    <string name="balance">Balance</string>
    <string name="buy_in">Buy In</string>
    <string name="cancel">Cancel</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text_phone">%1$s won\'t run without Google Play services, which are missing from your phone.</string>
    <string name="common_google_play_services_install_text_tablet">%1$s won\'t run without Google Play services, which are missing from your tablet.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. If the problem persists, please contact the developer for assistance.</string>
    <string name="common_google_play_services_unsupported_text">%1$s relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_updating_title">Google Play services are updating</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="attachment_download_failed_message">Failed to download. Tap to retry.</string>
    <string name="attachment_open_error_message">Can\'t open attachment</string>
    <string name="attachment_upload_access_error_message">Error accessing file</string>
    <string name="attachment_upload_size_limit_error_message">File size too large</string>
    <string name="attachment_upload_source_camera_button">Take photo</string>
    <string name="attachment_upload_source_gallery_button">Attach photo</string>
    <string name="attachment_upload_type_error_message">File type not permitted</string>
    <string name="chat_account_offline_message">There are currently no agents online.</string>
    <string name="chat_activity_title">Chat</string>
    <string name="chat_agent_joined_message">%1$s joined the chat</string>
    <string name="chat_agent_left_message">%1$s left the chat</string>
    <string name="chat_end_dialog_cancel_button">Cancel</string>
    <string name="auto_play">Auto Play</string>
    <string name="info_iam_back">You can click on the \"I Am Back\" now</string>
    <string name="info_msg_iam_back">Please click on the \"I Am Back\" \nbutton to continue with your game</string>
    <string name="join">JOIN</string>
</resources>