<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:background="@color/rummy_color_three"
        android:layout_width="match_parent"
        android:paddingTop="2dp"
        android:paddingBottom="2dp"
        android:layout_height="@dimen/lobby_taj_logo_height"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="@dimen/lobby_taj_logo_width"
            android:layout_height="@dimen/lobby_taj_logo_height"
            android:layout_marginLeft="@dimen/half_fab_margin"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:src="@drawable/rummy_ic_logo_game_room" />

        <LinearLayout
            android:layout_marginRight="@dimen/fab_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/free_cb"
                android:text="Free"
                android:buttonTint="@color/rummy_white"
                android:textColor="@color/rummy_white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <CheckBox
                android:id="@+id/cash_cb"
                android:layout_marginLeft="@dimen/fab_margin"
                android:text="Cash"
                android:buttonTint="@color/rummy_white"
                android:textColor="@color/rummy_white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/lobby_filter_bar_height"
        android:layout_gravity="center_vertical"
        android:background="@color/rummy_grey"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/entry"
                    android:textColor="@color/rummy_black_gray"
                    android:textSize="@dimen/filterBarTextSize" />

            </LinearLayout>
        </RelativeLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@drawable/rummy_lobby_divider" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cash_prize"
                    android:textColor="@color/rummy_black_gray"
                    android:textSize="@dimen/filterBarTextSize" />

            </LinearLayout>
        </RelativeLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@drawable/rummy_lobby_divider" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start_time"
                    android:textColor="@color/rummy_black_gray"
                    android:textSize="@dimen/filterBarTextSize" />

            </LinearLayout>
        </RelativeLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@drawable/rummy_lobby_divider" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/status_"
                    android:textColor="@color/rummy_black_gray"
                    android:textSize="@dimen/filterBarTextSize" />

            </LinearLayout>
        </RelativeLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@drawable/rummy_lobby_divider" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/players"
                    android:textColor="@color/rummy_black_gray"
                    android:textSize="@dimen/filterBarTextSize" />

            </LinearLayout>
        </RelativeLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@drawable/rummy_lobby_divider" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/join_"
                    android:textColor="@color/rummy_black_gray"
                    android:textSize="@dimen/filterBarTextSize" />

            </LinearLayout>
        </RelativeLayout>

    </LinearLayout>
</LinearLayout>
