<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/container"
    android:background="@drawable/rummy_lobby_item_bg"
    android:gravity="center_vertical"
    android:orientation="horizontal">


        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.11"
            android:gravity="center">

            <include layout="@layout/rummy_lobby_active_users" />
        </RelativeLayout>

    <View
        android:layout_marginTop="@dimen/half_fab_margin"
        android:layout_marginBottom="@dimen/half_fab_margin"
        android:layout_width="1dp"
        android:layout_marginLeft="5dp"
        android:layout_height="match_parent"
        android:background="@color/rummy_grey_dark"

        />


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.17"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="@dimen/marginSizeSmall">

            <TextView
                android:id="@+id/table_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences"
                android:textColor="@color/rummy_app_blue"
                android:textSize="@dimen/textSizeMedium"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bet"
                    android:textColor="@color/rummy_app_blue"
                    android:textSize="@dimen/textSizeMedium" />

                <TextView
                    android:id="@+id/betAmount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:textColor="@color/rummy_app_blue"
                    android:textSize="@dimen/textSizeMedium"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

    <View
        android:layout_marginTop="@dimen/half_fab_margin"
        android:layout_marginBottom="@dimen/half_fab_margin"
        android:layout_width="1dp"
        android:layout_marginLeft="5dp"
        android:layout_height="match_parent"
        android:background="@color/rummy_grey_dark" />



    <TextView
        android:id="@+id/table_bet"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/marginSizeSmall"
        android:layout_marginRight="@dimen/marginSizeSmall"
        android:layout_weight="0.29"
        android:textColor="@color/rummy_app_blue"
        android:textSize="@dimen/filterBarTextSize"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/marginSizeSmall"
        android:layout_marginRight="@dimen/marginSizeSmall"
        android:layout_weight="0.20"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bet"
                android:textColor="@color/rummy_app_blue"
                android:textSize="@dimen/filterBarTextSize" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chips"
                android:textColor="@color/rummy_app_blue"
                android:textSize="@dimen/filterBarTextSize" />

            <TextView
                android:id="@+id/chipsAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:textColor="@color/rummy_app_blue"
                android:textSize="@dimen/filterBarTextSize"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.19"
            android:paddingLeft="5dp"
            android:layout_gravity="center_vertical"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/lobby_players_iv"
                android:layout_width="20dp"
                android:layout_height="15dp"
                android:layout_gravity="center"
                android:scaleType="fitXY"
                android:src="@drawable/rummy_lobby_item_players_blue" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/noOfPlayersTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/marginSizeSmall"
                    android:textColor="@color/rummy_app_blue"
                    android:textSize="@dimen/textSizeMedium"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/marginSizeSmall"
                    android:text="Players"
                    android:textColor="@color/rummy_app_blue"
                    android:textSize="@dimen/textSizeMedium" />

            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:paddingRight="5dp"
            android:layout_height="wrap_content"
            android:layout_weight=".07"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:id="@+id/iv_favourite"
                android:padding="2dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/rummy_favourite_icon" />


        </LinearLayout>



    <View
        android:layout_marginTop="@dimen/half_fab_margin"
        android:layout_marginBottom="@dimen/half_fab_margin"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/rummy_grey_dark"/>




            <LinearLayout
                android:layout_marginRight="@dimen/half_fab_margin"
                android:layout_marginLeft="@dimen/fab_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:gravity="center"
                    android:id="@+id/join_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_join_lobby_item_bg"
                    android:paddingRight="@dimen/marginSizeMedium"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:textSize="12sp"
                    android:paddingLeft="@dimen/marginSizeMedium"
                    android:text="JOIN"
                    android:textColor="@color/rummy_white"
                    android:textStyle="bold" />

                <TextView
                    android:visibility="visible"
                    android:id="@+id/table_siting"
                    android:layout_width="wrap_content"
                    android:layout_marginTop="3dp"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@color/rummy_app_blue"
                    android:textSize="@dimen/topBarTextSize" />

            </LinearLayout>




    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.14"
        android:gravity="left"
        android:text="@string/join"
        android:textColor="@color/rummy_app_blue"
        android:textSize="@dimen/filterBarTextSize"
        android:visibility="gone" />

    <TextView
        android:id="@+id/table_total_players"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/marginSizeSmall"
        android:textColor="@color/rummy_app_blue"
        android:textSize="15sp"
        android:visibility="gone" />
</LinearLayout>
